@@ -12,6 +12,7 @@ import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
@@ -22,8 +23,6 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import eu.europeana.metis.authentication.user.AccountRole;
-import eu.europeana.metis.authentication.user.MetisUserView;
 import eu.europeana.metis.core.common.DaoFieldNames;
 import eu.europeana.metis.core.dao.DataEvolutionUtils;
 import eu.europeana.metis.core.dao.DatasetDao;
@@ -38,6 +37,7 @@ import eu.europeana.metis.core.dao.WorkflowValidationUtils;
 import eu.europeana.metis.core.dataset.Dataset;
 import eu.europeana.metis.core.dataset.DatasetExecutionInformation;
 import eu.europeana.metis.core.dataset.DatasetXslt;
+import eu.europeana.metis.core.engine.base.EngineTaskClient;
 import eu.europeana.metis.core.exceptions.NoDatasetFoundException;
 import eu.europeana.metis.core.exceptions.NoWorkflowExecutionFoundException;
 import eu.europeana.metis.core.exceptions.NoWorkflowFoundException;
@@ -57,6 +57,8 @@ import eu.europeana.metis.core.workflow.ValidationProperties;
 import eu.europeana.metis.core.workflow.Workflow;
 import eu.europeana.metis.core.workflow.WorkflowExecution;
 import eu.europeana.metis.core.workflow.WorkflowStatus;
+import eu.europeana.metis.core.workflow.execution.MetisPluginDTO;
+import eu.europeana.metis.core.workflow.execution.WorkflowExecutionDTO;
 import eu.europeana.metis.core.workflow.plugins.AbstractExecutablePlugin;
 import eu.europeana.metis.core.workflow.plugins.AbstractExecutablePluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.AbstractMetisPlugin;
@@ -77,8 +79,8 @@ import eu.europeana.metis.core.workflow.plugins.TransformationPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.ValidationExternalPluginMetadata;
 import eu.europeana.metis.core.workflow.plugins.ValidationInternalPluginMetadata;
 import eu.europeana.metis.exception.BadContentException;
+import eu.europeana.metis.exception.ExternalTaskException;
 import eu.europeana.metis.exception.GenericMetisException;
-import eu.europeana.metis.exception.UserUnauthorizedException;
 import eu.europeana.metis.utils.DateUtils;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -90,7 +92,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -98,8 +99,8 @@ import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.bson.types.ObjectId;
 import org.jetbrains.annotations.NotNull;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
@@ -107,13 +108,9 @@ import org.mockito.Mockito;
 import org.redisson.api.RLock;
 import org.redisson.api.RedissonClient;
 
-/**
- * @author Simon Tzanakis (Simon.Tzanakis@europeana.eu)
- * @since 2017-10-06
- */
 class TestOrchestratorService {
 
-  private static final int SOLR_COMMIT_PERIOD_IN_MINS = 15;
+  private static final int SOLR_COMMIT_PERIOD_IN_MINUTES = 15;
   private static WorkflowExecutionDao workflowExecutionDao;
   private static DataEvolutionUtils dataEvolutionUtils;
   private static RedirectionInferrer redirectionInferrer;
@@ -126,7 +123,7 @@ class TestOrchestratorService {
   private static WorkflowExecutionFactory workflowExecutionFactory;
   private static OrchestratorService orchestratorService;
   private static RedissonClient redissonClient;
-  private static Authorizer authorizer;
+  private static UserService userService;
 
   @BeforeAll
   static void prepare() {
@@ -139,7 +136,7 @@ class TestOrchestratorService {
     depublishRecordIdDao = mock(DepublishRecordIdDao.class);
     workflowExecutorManager = mock(WorkflowExecutorManager.class);
     redissonClient = mock(RedissonClient.class);
-    authorizer = mock(Authorizer.class);
+    userService = mock(UserService.class);
 
     redirectionInferrer = new RedirectionInferrer(workflowExecutionDao, dataEvolutionUtils);
     workflowExecutionFactory = spy(new WorkflowExecutionFactory(datasetXsltDao,
@@ -151,35 +148,36 @@ class TestOrchestratorService {
 
     orchestratorService = spy(new OrchestratorService(workflowExecutionFactory, workflowDao,
         workflowExecutionDao, validationUtils, dataEvolutionUtils, datasetDao,
-        workflowExecutorManager, redissonClient, authorizer, depublishRecordIdDao));
-    orchestratorService.setSolrCommitPeriodInMins(SOLR_COMMIT_PERIOD_IN_MINS);
+        workflowExecutorManager, redissonClient, depublishRecordIdDao, userService));
+    orchestratorService.setSolrCommitPeriodInMinutes(SOLR_COMMIT_PERIOD_IN_MINUTES);
   }
 
-  @AfterEach
-  void cleanUp() {
+  @BeforeEach
+  void cleanUp() throws ExternalTaskException {
     Mockito.reset(workflowExecutionDao);
     Mockito.reset(validationUtils);
     Mockito.reset(workflowDao);
     Mockito.reset(datasetDao);
     Mockito.reset(workflowExecutorManager);
     Mockito.reset(redissonClient);
-    Mockito.reset(authorizer);
     Mockito.reset(workflowExecutionFactory);
     Mockito.reset(orchestratorService);
+
+    //Stub for engine task dataset id creation
+    EngineTaskClient<?, ?> mockEngineTaskClient = mock(EngineTaskClient.class);
+    when(mockEngineTaskClient.createEngineDatasetId(anyString())).thenReturn(true);
+    when(workflowExecutorManager.getEngineTaskClient()).thenReturn(mockEngineTaskClient);
+    when(datasetDao.update(any(Dataset.class))).thenReturn("");
   }
 
   @Test
   void createWorkflow() throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     Dataset dataset = TestObjectFactory.createDataset("datasetName");
     workflow.setDatasetId(dataset.getDatasetId());
     when(datasetDao.getDatasetByDatasetId(dataset.getDatasetId())).thenReturn(dataset);
-    orchestratorService.createWorkflow(metisUserView, workflow.getDatasetId(), workflow, null);
+    orchestratorService.createWorkflow(workflow.getDatasetId(), workflow, null);
 
-    verify(authorizer, times(1))
-        .authorizeWriteExistingDatasetById(metisUserView, workflow.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
     InOrder inOrder = Mockito.inOrder(workflowDao);
     inOrder.verify(workflowDao, times(1)).workflowExistsForDataset(workflow.getDatasetId());
     inOrder.verify(workflowDao, times(1)).create(workflow);
@@ -188,27 +186,20 @@ class TestOrchestratorService {
 
   @Test
   void createWorkflowOrderOfPluginsNotAllowed() throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     Dataset dataset = TestObjectFactory.createDataset("datasetName");
     workflow.setDatasetId(dataset.getDatasetId());
     when(datasetDao.getDatasetByDatasetId(dataset.getDatasetId())).thenReturn(dataset);
-    doThrow(PluginExecutionNotAllowed.class).when(validationUtils)
-        .validateWorkflowPlugins(workflow, null);
+    doThrow(PluginExecutionNotAllowed.class).when(validationUtils).validateWorkflowPlugins(workflow, null);
     assertThrows(PluginExecutionNotAllowed.class,
-        () -> orchestratorService
-            .createWorkflow(metisUserView, workflow.getDatasetId(), workflow, null));
+        () -> orchestratorService.createWorkflow(workflow.getDatasetId(), workflow, null));
 
-    verify(authorizer, times(1))
-        .authorizeWriteExistingDatasetById(metisUserView, workflow.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
     verify(workflowDao, times(1)).workflowExistsForDataset(workflow.getDatasetId());
     verifyNoMoreInteractions(workflowDao);
   }
 
   @Test
   void createWorkflow_AlreadyExists() {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     Dataset dataset = TestObjectFactory.createDataset("datasetName");
     workflow.setDatasetId(dataset.getDatasetId());
@@ -216,8 +207,7 @@ class TestOrchestratorService {
     when(workflowDao.workflowExistsForDataset(workflow.getDatasetId())).thenReturn(true);
 
     assertThrows(WorkflowAlreadyExistsException.class,
-        () -> orchestratorService
-            .createWorkflow(metisUserView, workflow.getDatasetId(), workflow, null));
+        () -> orchestratorService.createWorkflow(workflow.getDatasetId(), workflow, null));
 
     InOrder inOrder = Mockito.inOrder(workflowDao);
     inOrder.verify(workflowDao, times(1)).workflowExistsForDataset(workflow.getDatasetId());
@@ -226,16 +216,12 @@ class TestOrchestratorService {
 
   @Test
   void updateWorkflow() throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     Dataset dataset = TestObjectFactory.createDataset("datasetName");
     workflow.setDatasetId(dataset.getDatasetId());
     when(datasetDao.getDatasetByDatasetId(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(dataset.getDatasetId())).thenReturn(workflow);
-    orchestratorService.updateWorkflow(metisUserView, workflow.getDatasetId(), workflow, null);
-    verify(authorizer, times(1))
-        .authorizeWriteExistingDatasetById(metisUserView, workflow.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
+    orchestratorService.updateWorkflow(workflow.getDatasetId(), workflow, null);
     InOrder inOrder = Mockito.inOrder(workflowDao);
     inOrder.verify(workflowDao, times(1)).getWorkflow(dataset.getDatasetId());
     inOrder.verify(workflowDao, times(1)).update(workflow);
@@ -244,14 +230,12 @@ class TestOrchestratorService {
 
   @Test
   void updateUserWorkflow_NoUserWorkflowFound() {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     Dataset dataset = TestObjectFactory.createDataset("datasetName");
     workflow.setDatasetId(dataset.getDatasetId());
     when(datasetDao.getDatasetByDatasetId(dataset.getDatasetId())).thenReturn(dataset);
     assertThrows(NoWorkflowFoundException.class,
-        () -> orchestratorService
-            .updateWorkflow(metisUserView, workflow.getDatasetId(), workflow, null));
+        () -> orchestratorService.updateWorkflow(workflow.getDatasetId(), workflow, null));
     InOrder inOrder = Mockito.inOrder(workflowDao);
     inOrder.verify(workflowDao, times(1)).getWorkflow(anyString());
     inOrder.verifyNoMoreInteractions();
@@ -259,30 +243,19 @@ class TestOrchestratorService {
 
   @Test
   void deleteWorkflow() throws GenericMetisException {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    orchestratorService.deleteWorkflow(metisUserView, workflow.getDatasetId());
-    verify(authorizer, times(1))
-        .authorizeWriteExistingDatasetById(metisUserView, workflow.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
-    ArgumentCaptor<String> workflowDatasetIdArgumentCaptor = ArgumentCaptor
-        .forClass(String.class);
+    orchestratorService.deleteWorkflow(workflow.getDatasetId());
+    ArgumentCaptor<String> workflowDatasetIdArgumentCaptor = ArgumentCaptor.forClass(String.class);
     verify(workflowDao, times(1)).deleteWorkflow(workflowDatasetIdArgumentCaptor.capture());
-    assertEquals(workflow.getDatasetId(),
-        workflowDatasetIdArgumentCaptor.getValue());
+    assertEquals(workflow.getDatasetId(), workflowDatasetIdArgumentCaptor.getValue());
   }
 
   @Test
   void getWorkflow() throws GenericMetisException {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
 
-    Workflow retrievedWorkflow = orchestratorService
-        .getWorkflow(metisUserView, workflow.getDatasetId());
-    verify(authorizer, times(1))
-        .authorizeReadExistingDatasetById(metisUserView, workflow.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
+    Workflow retrievedWorkflow = orchestratorService.getWorkflow(workflow.getDatasetId());
     assertSame(workflow, retrievedWorkflow);
   }
 
@@ -290,44 +263,31 @@ class TestOrchestratorService {
   void getWorkflowExecutionByExecutionId() throws GenericMetisException {
 
     // Create some objects
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String workflowExecutionId = "workflow execution ID";
-    final WorkflowExecution workflowExecution = mock(WorkflowExecution.class);
-    final String datasetId = "dataset ID";
-    when(workflowExecution.getDatasetId()).thenReturn(datasetId);
+    final WorkflowExecution workflowExecution = TestObjectFactory.createWorkflowExecutionObject();
 
     // Test the happy flow
     when(workflowExecutionDao.getById(workflowExecutionId)).thenReturn(workflowExecution);
-    when(authorizer.authorizeReadExistingDatasetById(metisUserView, datasetId)).thenReturn(null);
-    assertSame(workflowExecution,
-        orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId));
+    when(workflowExecutionDao.getById(workflowExecution.getId().toString())).thenReturn(workflowExecution);
+    WorkflowExecutionDTO workflowExecutionDTOResult = orchestratorService.getWorkflowExecutionDTOByExecutionId(
+        workflowExecutionId);
+    assertEquals(workflowExecution.getDatasetId(), workflowExecutionDTOResult.getDatasetId());
 
     // Test when the workflow execution does not exist
     when(workflowExecutionDao.getById(workflowExecutionId)).thenReturn(null);
-    assertNull(
-        orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId));
+    assertNull(orchestratorService.getWorkflowExecutionDTOByExecutionId(workflowExecutionId));
     when(workflowExecutionDao.getById(workflowExecutionId)).thenReturn(workflowExecution);
-    assertSame(workflowExecution,
-        orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId));
-
-    // Test when the user is not allowed
-    when(authorizer.authorizeReadExistingDatasetById(metisUserView, datasetId))
-        .thenThrow(new UserUnauthorizedException(""));
-    assertThrows(UserUnauthorizedException.class, () -> orchestratorService
-        .getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId));
-    doReturn(null).when(authorizer).authorizeReadExistingDatasetById(metisUserView, datasetId);
-    assertSame(workflowExecution,
-        orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId));
+    workflowExecutionDTOResult = orchestratorService.getWorkflowExecutionDTOByExecutionId(
+        workflowExecutionId);
+    assertEquals(workflowExecution.getDatasetId(), workflowExecutionDTOResult.getDatasetId());
   }
 
   @Test
   void getWorkflowExecutionByExecutionId_NonExistingWorkflowExecution()
       throws GenericMetisException {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String workflowExecutionId = "workflow execution id";
     when(workflowExecutionDao.getById(workflowExecutionId)).thenReturn(null);
-    orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId);
-    verifyNoMoreInteractions(authorizer);
+    orchestratorService.getWorkflowExecutionDTOByExecutionId(workflowExecutionId);
     InOrder inOrder = Mockito.inOrder(workflowExecutionDao);
     inOrder.verify(workflowExecutionDao, times(1)).getById(workflowExecutionId);
     inOrder.verifyNoMoreInteractions();
@@ -337,11 +297,9 @@ class TestOrchestratorService {
   void addWorkflowInQueueOfWorkflowExecutions() throws Exception {
 
     // Create the test objects
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(datasetDao.getDatasetByDatasetId(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
     RLock rlock = mock(RLock.class);
@@ -352,304 +310,277 @@ class TestOrchestratorService {
     DatasetXslt datasetXslt = TestObjectFactory.createXslt(dataset);
     datasetXslt.setId(TestObjectFactory.DATASET_XSLT.getId());
     when(datasetXsltDao.getLatestDefaultXslt()).thenReturn(datasetXslt);
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
+    WorkflowExecution workflowExecutionTest = TestObjectFactory.createWorkflowExecutionObject(dataset);
     workflowExecutionTest.setId(objectId);
     when(workflowExecutionDao.create(any(WorkflowExecution.class))).thenReturn(workflowExecutionTest);
     doNothing().when(rlock).unlock();
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
+    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString());
 
     // Add the workflow
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
-    verify(authorizer, times(1))
-        .authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
-
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutionsWithoutAuthorization(dataset.getDatasetId(), null,
-            null,
-            0);
-    verifyNoMoreInteractions(authorizer);
+    orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null, TestObjectFactory.USER_ID);
+    orchestratorService.addWorkflowInQueueOfWorkflowExecutionsWithoutAuthorization(dataset.getDatasetId(), null, null);
 
     // Verify the validation parameters
     final Map<ExecutablePluginType, AbstractExecutablePluginMetadata> pluginsByType = workflow
         .getMetisPluginsMetadata().stream().collect(Collectors
             .toMap(AbstractExecutablePluginMetadata::getExecutablePluginType, Function.identity(),
                 (m1, m2) -> m1));
-    final ValidationInternalPluginMetadata metadataInternal =
-        (ValidationInternalPluginMetadata) pluginsByType
-            .get(ExecutablePluginType.VALIDATION_INTERNAL);
-    assertEquals(workflowExecutionFactory.getValidationInternalProperties().getUrlOfSchemasZip(),
+    final ValidationInternalPluginMetadata metadataInternal = (ValidationInternalPluginMetadata) pluginsByType.get(
+        ExecutablePluginType.VALIDATION_INTERNAL);
+    assertEquals(workflowExecutionFactory.getValidationInternalProperties().urlOfSchemasZip(),
         metadataInternal.getUrlOfSchemasZip());
-    assertEquals(workflowExecutionFactory.getValidationInternalProperties().getSchemaRootPath(),
+    assertEquals(workflowExecutionFactory.getValidationInternalProperties().schemaRootPath(),
         metadataInternal.getSchemaRootPath());
-    assertEquals(workflowExecutionFactory.getValidationInternalProperties().getSchematronRootPath(),
+    assertEquals(workflowExecutionFactory.getValidationInternalProperties().schematronRootPath(),
         metadataInternal.getSchematronRootPath());
-    final ValidationExternalPluginMetadata metadataExternal =
-        (ValidationExternalPluginMetadata) pluginsByType
-            .get(ExecutablePluginType.VALIDATION_EXTERNAL);
-    assertEquals(workflowExecutionFactory.getValidationExternalProperties().getUrlOfSchemasZip(),
+    final ValidationExternalPluginMetadata metadataExternal = (ValidationExternalPluginMetadata) pluginsByType.get(
+        ExecutablePluginType.VALIDATION_EXTERNAL);
+    assertEquals(workflowExecutionFactory.getValidationExternalProperties().urlOfSchemasZip(),
         metadataExternal.getUrlOfSchemasZip());
-    assertEquals(workflowExecutionFactory.getValidationExternalProperties().getSchemaRootPath(),
+    assertEquals(workflowExecutionFactory.getValidationExternalProperties().schemaRootPath(),
         metadataExternal.getSchemaRootPath());
-    assertEquals(workflowExecutionFactory.getValidationExternalProperties().getSchematronRootPath(),
+    assertEquals(workflowExecutionFactory.getValidationExternalProperties().schematronRootPath(),
         metadataExternal.getSchematronRootPath());
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_TransformationUsesCustomXslt()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    workflow.getMetisPluginsMetadata().forEach(abstractMetisPluginMetadata -> {
-      if (abstractMetisPluginMetadata instanceof TransformationPluginMetadata) {
-        ((TransformationPluginMetadata) abstractMetisPluginMetadata).setCustomXslt(true);
-      }
-    });
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    List<AbstractExecutablePluginMetadata> updatedMetadata =
+        workflow.getMetisPluginsMetadata().stream()
+                .peek(metadata -> {
+                  if (metadata instanceof TransformationPluginMetadata transformationMetadata) {
+                    transformationMetadata.setCustomXslt(true);
+                  }
+                }).toList();
+    workflow.setMetisPluginsMetadata(updatedMetadata);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
     RLock rlock = mock(RLock.class);
     when(redissonClient.getFairLock(anyString())).thenReturn(rlock);
     doNothing().when(rlock).lock();
     when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(null);
-    ObjectId objectId = new ObjectId();
     DatasetXslt datasetXslt = TestObjectFactory.createXslt(dataset);
     datasetXslt.setId(TestObjectFactory.DATASET_XSLT.getId());
     dataset.setXsltId(datasetXslt.getId());
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
-    workflowExecutionTest.setId(objectId);
     when(datasetXsltDao.getById(dataset.getXsltId().toString())).thenReturn(datasetXslt);
-    when(workflowExecutionDao.create(any(WorkflowExecution.class)))
-        .thenReturn(workflowExecutionTest);
+
+    ObjectId objectId = new ObjectId();
+
+    ArgumentCaptor<WorkflowExecution> workflowExecutionArgumentCaptor = ArgumentCaptor.forClass(WorkflowExecution.class);
+    when(workflowExecutionDao.create(workflowExecutionArgumentCaptor.capture()))
+        .thenAnswer(invocation -> {
+          WorkflowExecution argument = invocation.getArgument(0);
+          argument.setId(objectId);
+          return argument;
+        });
+    doAnswer(invocation -> workflowExecutionArgumentCaptor.getValue())
+        .when(workflowExecutionDao).getById(objectId.toString());
     doNothing().when(rlock).unlock();
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
+    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString());
+    WorkflowExecutionDTO workflowExecutionDTO = orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(),
+        null, null, TestObjectFactory.USER_ID);
+    Optional<TransformationPluginMetadata> transformationPluginMetadata = workflowExecutionDTO
+        .getMetisPlugins().stream()
+        .map(MetisPluginDTO::getPluginMetadata)
+        .filter(TransformationPluginMetadata.class::isInstance)
+        .map(TransformationPluginMetadata.class::cast)
+        .findFirst();
+    assertTrue(transformationPluginMetadata.isPresent());
+    assertTrue(transformationPluginMetadata.get().isCustomXslt());
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_AddHTTPHarvest()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
     HTTPHarvestPluginMetadata httpHarvestPluginMetadata = new HTTPHarvestPluginMetadata();
     httpHarvestPluginMetadata.setUrl("http://harvest.url.org");
     httpHarvestPluginMetadata.setEnabled(true);
-    workflow.getMetisPluginsMetadata().set(0, httpHarvestPluginMetadata);
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    List<AbstractExecutablePluginMetadata> metisPluginsMetadata = workflow.getMetisPluginsMetadata();
+    metisPluginsMetadata.set(0, httpHarvestPluginMetadata);
+    workflow.setMetisPluginsMetadata(metisPluginsMetadata);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
     when(redissonClient.getFairLock(anyString())).thenReturn(Mockito.mock(RLock.class));
     when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(null);
     ObjectId objectId = new ObjectId();
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
-    workflowExecutionTest.setId(objectId);
-    when(workflowExecutionDao.create(any(WorkflowExecution.class))).thenReturn(workflowExecutionTest);
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
+
+    ArgumentCaptor<WorkflowExecution> workflowExecutionArgumentCaptor = ArgumentCaptor.forClass(WorkflowExecution.class);
+    when(workflowExecutionDao.create(workflowExecutionArgumentCaptor.capture()))
+        .thenAnswer(invocation -> {
+          WorkflowExecution argument = invocation.getArgument(0);
+          argument.setId(objectId);
+          return argument;
+        });
+    doAnswer(invocation -> workflowExecutionArgumentCaptor.getValue())
+        .when(workflowExecutionDao).getById(objectId.toString());
+    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString());
+    WorkflowExecutionDTO workflowExecutionDTO = orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(),
+        null, null, TestObjectFactory.USER_ID);
+    assertEquals(httpHarvestPluginMetadata.getUrl(),
+        ((HTTPHarvestPluginMetadata) workflowExecutionDTO.getMetisPlugins().getFirst()
+                                                         .getPluginMetadata()).getUrl());
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_NoHarvestPlugin() throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    workflow.getMetisPluginsMetadata().remove(0);
+    workflow.getMetisPluginsMetadata().removeFirst();
 
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
-    OaipmhHarvestPlugin oaipmhHarvestPlugin = (OaipmhHarvestPlugin) ExecutablePluginFactory
-        .createPlugin(new OaipmhHarvestPluginMetadata());
+    OaipmhHarvestPlugin oaipmhHarvestPlugin = (OaipmhHarvestPlugin) ExecutablePluginFactory.createPlugin(
+        new OaipmhHarvestPluginMetadata());
     oaipmhHarvestPlugin.setPluginMetadata(new OaipmhHarvestPluginMetadata());
     oaipmhHarvestPlugin.setStartedDate(new Date());
     ExecutionProgress executionProgress = new ExecutionProgress();
     executionProgress.setProcessedRecords(5);
     oaipmhHarvestPlugin.setExecutionProgress(executionProgress);
-    when(validationUtils.validateWorkflowPlugins(workflow, null))
-        .thenReturn(new PluginWithExecutionId<>("execution id", oaipmhHarvestPlugin));
+    when(validationUtils.validateWorkflowPlugins(workflow, null)).thenReturn(
+        new PluginWithExecutionId<>("execution id", oaipmhHarvestPlugin));
     RLock rlock = mock(RLock.class);
     when(redissonClient.getFairLock(anyString())).thenReturn(rlock);
     doNothing().when(rlock).lock();
     when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(null);
     ObjectId objectId = new ObjectId();
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
+    WorkflowExecution workflowExecutionTest = TestObjectFactory.createWorkflowExecutionObject(dataset);
     workflowExecutionTest.setId(objectId);
     when(workflowExecutionDao.create(any(WorkflowExecution.class))).thenReturn(workflowExecutionTest);
     doNothing().when(rlock).unlock();
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
+    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString());
+    orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null, TestObjectFactory.USER_ID);
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_NoHarvestPlugin_NoProcessPlugin()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
     when(redissonClient.getFairLock(anyString())).thenReturn(Mockito.mock(RLock.class));
     when(validationUtils.validateWorkflowPlugins(workflow, null))
         .thenThrow(new PluginExecutionNotAllowed(""));
     assertThrows(PluginExecutionNotAllowed.class, () -> orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0));
+        .addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null, TestObjectFactory.USER_ID));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_EcloudDatasetAlreadyGenerated()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     dataset.setEcloudDatasetId("f525f64c-fea0-44bf-8c56-88f30962734c");
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
     when(redissonClient.getFairLock(anyString())).thenReturn(Mockito.mock(RLock.class));
     when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(null);
     ObjectId objectId = new ObjectId();
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
+    WorkflowExecution workflowExecutionTest = TestObjectFactory.createWorkflowExecutionObject(dataset);
     workflowExecutionTest.setId(objectId);
     when(workflowExecutionDao.create(any(WorkflowExecution.class))).thenReturn(workflowExecutionTest);
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
-  }
-
-  @Test
-  void addWorkflowInQueueOfWorkflowExecutions_EcloudDatasetAlreadyExistsInEcloud()
-      throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
-    Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
-    Workflow workflow = TestObjectFactory.createWorkflowObject();
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
-    when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
-    when(datasetDao.checkAndCreateDatasetInEcloud(any(Dataset.class)))
-        .thenReturn(UUID.randomUUID().toString());
-    RLock rlock = mock(RLock.class);
-    when(redissonClient.getFairLock(anyString())).thenReturn(rlock);
-    doNothing().when(rlock).lock();
-    when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(null);
-    ObjectId objectId = new ObjectId();
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
-    workflowExecutionTest.setId(objectId);
-    when(workflowExecutionDao.create(any(WorkflowExecution.class))).thenReturn(workflowExecutionTest);
-    doNothing().when(rlock).unlock();
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
+    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString());
+    orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null, TestObjectFactory.USER_ID);
+    verify(datasetDao, times(0)).update(any(Dataset.class));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_EcloudDatasetCreationFails()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(workflow.getDatasetId())).thenReturn(workflow);
-    when(datasetDao.checkAndCreateDatasetInEcloud(any(Dataset.class)))
-        .thenReturn(UUID.randomUUID().toString());
     when(redissonClient.getFairLock(anyString())).thenReturn(Mockito.mock(RLock.class));
     when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(null);
     ObjectId objectId = new ObjectId();
-    WorkflowExecution workflowExecutionTest = new WorkflowExecution(dataset, new ArrayList<>(), 0);
+    WorkflowExecution workflowExecutionTest = TestObjectFactory.createWorkflowExecutionObject(dataset);
     workflowExecutionTest.setId(objectId);
     when(workflowExecutionDao.create(any(WorkflowExecution.class))).thenReturn(workflowExecutionTest);
-    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString(), 0);
-    orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0);
+    doNothing().when(workflowExecutorManager).addWorkflowExecutionToQueue(objectId.toString());
+
+    EngineTaskClient<?, ?> mockEngineTaskClient = mock(EngineTaskClient.class);
+    when(mockEngineTaskClient.createEngineDatasetId(anyString())).thenReturn(false);
+    when(workflowExecutorManager.getEngineTaskClient()).thenReturn(mockEngineTaskClient);
+    assertThrows(ExternalTaskException.class, () ->
+        orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null,
+            TestObjectFactory.USER_ID));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_NoDatasetFoundException()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, datasetId))
-        .thenThrow(NoDatasetFoundException.class);
+    when(datasetDao.getDatasetOrThrow(datasetId)).thenThrow(new NoDatasetFoundException(datasetId));
     assertThrows(NoDatasetFoundException.class, () -> orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, datasetId, null, null, 0));
+        .addWorkflowInQueueOfWorkflowExecutions(datasetId, null, null, TestObjectFactory.USER_ID));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_NoDatasetFoundException_Unauthorized() {
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
     when(datasetDao.getDatasetByDatasetId(datasetId)).thenReturn(null);
-    assertThrows(NoDatasetFoundException.class, () -> orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutionsWithoutAuthorization(datasetId, null, null, 0));
+    assertThrows(NoDatasetFoundException.class,
+        () -> orchestratorService.addWorkflowInQueueOfWorkflowExecutionsWithoutAuthorization(datasetId, null, null));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_NoWorkflowFoundException()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(dataset.getDatasetId())).thenReturn(null);
-    assertThrows(NoWorkflowFoundException.class, () -> orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0));
+    assertThrows(NoWorkflowFoundException.class,
+        () -> orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null,
+            TestObjectFactory.USER_ID));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_WorkflowIsEmpty() throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = new Workflow();
     workflow.setDatasetId(dataset.getDatasetId());
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(dataset.getDatasetId())).thenReturn(workflow);
-    when(validationUtils.validateWorkflowPlugins(workflow, null))
-        .thenThrow(new BadContentException(""));
-    assertThrows(BadContentException.class, () -> orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0));
+    when(validationUtils.validateWorkflowPlugins(workflow, null)).thenThrow(new BadContentException(""));
+    assertThrows(BadContentException.class,
+        () -> orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null,
+            TestObjectFactory.USER_ID));
   }
 
   @Test
   void addWorkflowInQueueOfWorkflowExecutions_WorkflowExecutionAlreadyExistsException()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
     Workflow workflow = TestObjectFactory.createWorkflowObject();
-    when(authorizer.authorizeWriteExistingDatasetById(metisUserView, dataset.getDatasetId()))
-        .thenReturn(dataset);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
     when(workflowDao.getWorkflow(dataset.getDatasetId())).thenReturn(workflow);
     when(redissonClient.getFairLock(anyString())).thenReturn(Mockito.mock(RLock.class));
-    when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId()))
-        .thenReturn(new ObjectId().toString());
-    assertThrows(WorkflowExecutionAlreadyExistsException.class, () -> orchestratorService
-        .addWorkflowInQueueOfWorkflowExecutions(metisUserView, dataset.getDatasetId(), null, null, 0));
+    when(workflowExecutionDao.existsAndNotCompleted(dataset.getDatasetId())).thenReturn(new ObjectId().toString());
+    assertThrows(WorkflowExecutionAlreadyExistsException.class,
+        () -> orchestratorService.addWorkflowInQueueOfWorkflowExecutions(dataset.getDatasetId(), null, null,
+            TestObjectFactory.USER_ID));
   }
 
   @Test
   void cancelWorkflowExecution() throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     WorkflowExecution workflowExecution = TestObjectFactory.createWorkflowExecutionObject();
     when(workflowExecutionDao.getById(TestObjectFactory.EXECUTIONID)).thenReturn(workflowExecution);
-    doNothing().when(workflowExecutionDao).setCancellingState(workflowExecution, null);
-    orchestratorService.cancelWorkflowExecution(metisUserView, TestObjectFactory.EXECUTIONID);
-    verify(authorizer, times(1))
-        .authorizeWriteExistingDatasetById(metisUserView, workflowExecution.getDatasetId());
-    verifyNoMoreInteractions(authorizer);
+    doNothing().when(workflowExecutionDao).setCancellingState(workflowExecution, TestObjectFactory.USER_ID);
+    orchestratorService.cancelWorkflowExecution(TestObjectFactory.EXECUTIONID, TestObjectFactory.USER_ID);
+    verify(workflowExecutionDao, times(1)).setCancellingState(workflowExecution, TestObjectFactory.USER_ID);
   }
 
   @Test
   void cancelWorkflowExecution_NoWorkflowExecutionFoundException() {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     when(workflowExecutionDao.getById(TestObjectFactory.EXECUTIONID)).thenReturn(null);
-    assertThrows(NoWorkflowExecutionFoundException.class, () -> orchestratorService
-        .cancelWorkflowExecution(metisUserView, TestObjectFactory.EXECUTIONID));
+    assertThrows(NoWorkflowExecutionFoundException.class,
+        () -> orchestratorService.cancelWorkflowExecution(TestObjectFactory.EXECUTIONID, TestObjectFactory.USER_ID));
     verifyNoMoreInteractions(workflowExecutorManager);
   }
 
@@ -662,32 +593,28 @@ class TestOrchestratorService {
   @Test
   void getLatestSuccessfulFinishedPluginByDatasetIdIfPluginTypeAllowedForExecution_ProcessPlugin()
       throws Exception {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
     final AbstractExecutablePlugin oaipmhHarvestPlugin = ExecutablePluginFactory
         .createPlugin(new OaipmhHarvestPluginMetadata());
-    when(authorizer.authorizeReadExistingDatasetById(metisUserView, datasetId)).thenReturn(null);
+
     doReturn(new PluginWithExecutionId<>("execution ID", oaipmhHarvestPlugin))
         .when(dataEvolutionUtils)
         .computePredecessorPlugin(ExecutablePluginType.VALIDATION_EXTERNAL, null, datasetId);
     assertSame(oaipmhHarvestPlugin, orchestratorService
-        .getLatestFinishedPluginByDatasetIdIfPluginTypeAllowedForExecution(metisUserView, datasetId,
+        .getLatestFinishedPluginByDatasetIdIfPluginTypeAllowedForExecution(datasetId,
             ExecutablePluginType.VALIDATION_EXTERNAL, null));
-    verify(authorizer, times(1)).authorizeReadExistingDatasetById(metisUserView, datasetId);
-    verifyNoMoreInteractions(authorizer);
   }
 
   @Test
   void getLatestFinishedPluginByDatasetIdIfPluginTypeAllowedForExecution_PluginExecutionNotAllowed()
-      throws NoDatasetFoundException, UserUnauthorizedException, PluginExecutionNotAllowed {
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
+      throws PluginExecutionNotAllowed {
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
-    when(authorizer.authorizeReadExistingDatasetById(metisUserView, datasetId)).thenReturn(null);
+
     when(dataEvolutionUtils.computePredecessorPlugin(ExecutablePluginType.VALIDATION_EXTERNAL, null,
         datasetId)).thenThrow(new PluginExecutionNotAllowed(""));
     assertThrows(PluginExecutionNotAllowed.class, () -> orchestratorService
-        .getLatestFinishedPluginByDatasetIdIfPluginTypeAllowedForExecution(metisUserView,
-            datasetId, ExecutablePluginType.VALIDATION_EXTERNAL, null));
+        .getLatestFinishedPluginByDatasetIdIfPluginTypeAllowedForExecution(datasetId, ExecutablePluginType.VALIDATION_EXTERNAL,
+            null));
   }
 
   @Test
@@ -695,17 +622,16 @@ class TestOrchestratorService {
 
     // Define some constants
     final int nextPage = 1;
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
     final Set<WorkflowStatus> workflowStatuses = Collections.singleton(WorkflowStatus.INQUEUE);
 
     // Check with specific dataset ID: should query only that dataset.
     doReturn(new ResultList<>(Collections.emptyList(), false)).when(workflowExecutionDao)
-        .getAllWorkflowExecutions(any(), any(), any(), anyBoolean(), anyInt(), anyInt(), anyBoolean());
-    orchestratorService.getAllWorkflowExecutions(metisUserView, datasetId, workflowStatuses,
+                                                              .getAllWorkflowExecutions(any(), any(), any(), anyBoolean(),
+                                                                  anyInt(), anyInt(), anyBoolean());
+    orchestratorService.getAllWorkflowExecutions(datasetId, workflowStatuses,
         DaoFieldNames.ID, false, nextPage);
-    verify(authorizer, times(1)).authorizeReadExistingDatasetById(metisUserView, datasetId);
-    verifyNoMoreInteractions(authorizer);
+
     verify(workflowExecutionDao, times(1)).getAllWorkflowExecutions(
         Collections.singleton(datasetId), workflowStatuses, DaoFieldNames.ID, false,
         nextPage, 1, false);
@@ -714,11 +640,10 @@ class TestOrchestratorService {
   }
 
   @Test
-  void getAllWorkflowExecutionsForRegularUser() throws GenericMetisException {
+  void getAllWorkflowExecutionsFor() throws GenericMetisException {
 
     // Define some constants
     final int nextPage = 1;
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final Set<String> datasetIds = new HashSet<>(Arrays.asList("A", "B", "C"));
     final List<Dataset> datasets = datasetIds.stream().map(id -> {
       final Dataset result = new Dataset();
@@ -727,16 +652,12 @@ class TestOrchestratorService {
     }).toList();
     final Set<WorkflowStatus> workflowStatuses = Collections.singleton(WorkflowStatus.INQUEUE);
 
-    // Check for all datasets and for regular user: should query all datasets to which that user's
-    // organization has rights.
-    when(datasetDao.getAllDatasetsByOrganizationId(metisUserView.getOrganizationId()))
-        .thenReturn(datasets);
+    when(datasetDao.getAllDatasets()).thenReturn(datasets);
     doReturn(new ResultList<>(Collections.emptyList(), false)).when(workflowExecutionDao)
-        .getAllWorkflowExecutions(any(), any(), any(), anyBoolean(), anyInt(), anyInt(), anyBoolean());
-    orchestratorService.getAllWorkflowExecutions(metisUserView, null, workflowStatuses,
+                                                              .getAllWorkflowExecutions(any(), any(), any(), anyBoolean(),
+                                                                  anyInt(), anyInt(), anyBoolean());
+    orchestratorService.getAllWorkflowExecutions(null, workflowStatuses,
         DaoFieldNames.CREATED_DATE, false, nextPage);
-    verify(authorizer, times(1)).authorizeReadAllDatasets(metisUserView);
-    verifyNoMoreInteractions(authorizer);
     verify(workflowExecutionDao, times(1)).getAllWorkflowExecutions(datasetIds,
         workflowStatuses, DaoFieldNames.CREATED_DATE, false, nextPage, 1, false);
     verify(workflowExecutionDao, times(1)).getWorkflowExecutionsPerRequest();
@@ -744,34 +665,11 @@ class TestOrchestratorService {
   }
 
   @Test
-  void getAllWorkflowExecutionsForAdmin() throws GenericMetisException {
-
-    // Define some constants
-    final int nextPage = 1;
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
-    final Set<WorkflowStatus> workflowStatuses = Collections.singleton(WorkflowStatus.INQUEUE);
-
-    // Check for all datasets and for admin user: should query all datasets.
-    doReturn(AccountRole.METIS_ADMIN).when(metisUserView).getAccountRole();
-    doReturn(new ResultList<>(Collections.emptyList(), false)).when(workflowExecutionDao)
-        .getAllWorkflowExecutions(any(), any(), any(), anyBoolean(), anyInt(), anyInt(), anyBoolean());
-    orchestratorService.getAllWorkflowExecutions(metisUserView, null, workflowStatuses,
-        DaoFieldNames.CREATED_DATE, true, nextPage);
-    verify(authorizer, times(1)).authorizeReadAllDatasets(metisUserView);
-    verifyNoMoreInteractions(authorizer);
-    verify(workflowExecutionDao, times(1)).getAllWorkflowExecutions(isNull(), eq(workflowStatuses),
-        eq(DaoFieldNames.CREATED_DATE), eq(true), eq(nextPage), eq(1), eq(false));
-    verify(workflowExecutionDao, times(1)).getWorkflowExecutionsPerRequest();
-    verifyNoMoreInteractions(workflowExecutionDao);
-  }
-
-  @Test
-  void getWorkflowExecutionOverviewForRegularUser() throws GenericMetisException {
+  void getWorkflowExecutionOverview() {
 
     // Define some constants
     final int nextPage = 1;
     final int pageCount = 2;
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final Set<String> datasetIds = new HashSet<>(Arrays.asList("A", "B", "C"));
     final List<Dataset> datasets = datasetIds.stream().map(id -> {
       final Dataset result = new Dataset();
@@ -780,19 +678,14 @@ class TestOrchestratorService {
     }).toList();
     final List<ExecutionDatasetPair> data = TestObjectFactory.createExecutionsWithDatasets(4);
 
-    // Check for all datasets and for regular user: should query all datasets to which that user's
-    // organization has rights.
-    when(datasetDao.getAllDatasetsByOrganizationId(metisUserView.getOrganizationId()))
-        .thenReturn(datasets);
+    when(datasetDao.getAllDatasets()).thenReturn(datasets);
     when(workflowExecutionDao
         .getWorkflowExecutionsOverview(eq(datasetIds), isNull(), isNull(), isNull(), isNull(),
             eq(nextPage), eq(pageCount)))
         .thenReturn(new ResultList<>(data, false));
     final List<ExecutionAndDatasetView> result = orchestratorService
-        .getWorkflowExecutionsOverview(metisUserView, null, null, null, null, nextPage, pageCount)
+        .getWorkflowExecutionsOverview(null, null, null, null, nextPage, pageCount)
         .getResults();
-    verify(authorizer, times(1)).authorizeReadAllDatasets(metisUserView);
-    verifyNoMoreInteractions(authorizer);
     verify(workflowExecutionDao, times(1))
         .getWorkflowExecutionsOverview(eq(datasetIds), isNull(), isNull(), isNull(), isNull(),
             eq(nextPage), eq(pageCount));
@@ -801,67 +694,31 @@ class TestOrchestratorService {
     assertEquals(data.size(), result.size());
     assertEquals(data.stream().map(ExecutionDatasetPair::getDataset).map(Dataset::getDatasetId).toList(),
         result.stream().map(ExecutionAndDatasetView::getDataset)
-            .map(DatasetSummaryView::getDatasetId).toList());
+              .map(DatasetSummaryView::getDatasetId).toList());
     assertEquals(data.stream().map(ExecutionDatasetPair::getExecution).map(WorkflowExecution::getId)
-            .map(ObjectId::toString).toList(),
+                     .map(ObjectId::toString).toList(),
         result.stream().map(ExecutionAndDatasetView::getExecution)
-            .map(ExecutionSummaryView::getId).toList());
-  }
-
-  @Test
-  void getWorkflowExecutionOverviewForAdmin() throws GenericMetisException {
-
-    // Define some constants
-    final int nextPage = 1;
-    final int pageCount = 2;
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
-    final List<ExecutionDatasetPair> data = TestObjectFactory.createExecutionsWithDatasets(4);
-
-    // Check for all datasets and for admin user: should query all datasets.
-    doReturn(AccountRole.METIS_ADMIN).when(metisUserView).getAccountRole();
-    when(workflowExecutionDao
-        .getWorkflowExecutionsOverview(isNull(), isNull(), isNull(), isNull(), isNull(),
-            eq(nextPage), eq(pageCount)))
-        .thenReturn(new ResultList<>(data, false));
-    final List<ExecutionAndDatasetView> result = orchestratorService
-        .getWorkflowExecutionsOverview(metisUserView, null, null, null, null, nextPage, pageCount)
-        .getResults();
-    verify(authorizer, times(1)).authorizeReadAllDatasets(metisUserView);
-    verifyNoMoreInteractions(authorizer);
-    verify(workflowExecutionDao, times(1))
-        .getWorkflowExecutionsOverview(isNull(), isNull(), isNull(), isNull(), isNull(),
-            eq(nextPage), eq(pageCount));
-    verify(workflowExecutionDao, times(1)).getWorkflowExecutionsPerRequest();
-    verifyNoMoreInteractions(workflowExecutionDao);
-    assertEquals(data.size(), result.size());
-    assertEquals(data.stream().map(ExecutionDatasetPair::getDataset).map(Dataset::getDatasetId).toList(),
-        result.stream().map(ExecutionAndDatasetView::getDataset)
-            .map(DatasetSummaryView::getDatasetId).toList());
-    assertEquals(data.stream().map(ExecutionDatasetPair::getExecution).map(WorkflowExecution::getId)
-            .map(ObjectId::toString).toList(),
-        result.stream().map(ExecutionAndDatasetView::getExecution)
-            .map(ExecutionSummaryView::getId).toList());
+              .map(ExecutionSummaryView::getId).toList());
   }
 
   @Test
   void getDatasetExecutionInformation() throws GenericMetisException {
     ExecutionProgress executionProgress = getExecutionProgress(100, 20);
-    final Date longEnoughToBeValidDate = DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINS + 3),
+    final Date longEnoughToBeValidDate = DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINUTES + 3),
         TimeUnit.MINUTES);
-    final Date notLongEnoughToBeValidDate = DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINS + 2),
+    final Date notLongEnoughToBeValidDate = DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINUTES + 2),
         TimeUnit.MINUTES);
-
 
     // Create preview plugin
-    AbstractExecutablePlugin<IndexToPreviewPluginMetadata> previewPlugin = ExecutablePluginFactory
-        .createPlugin(new IndexToPreviewPluginMetadata());
+    AbstractExecutablePlugin<IndexToPreviewPluginMetadata> previewPlugin = ExecutablePluginFactory.createPlugin(
+        new IndexToPreviewPluginMetadata());
     previewPlugin.setFinishedDate(longEnoughToBeValidDate);
     previewPlugin.setDataStatus(null); // Is default status, means valid.
     previewPlugin.setExecutionProgress(executionProgress);
 
     // Create second publish plugin
-    AbstractExecutablePlugin<IndexToPublishPluginMetadata> lastPublishPlugin = ExecutablePluginFactory
-        .createPlugin(new IndexToPublishPluginMetadata());
+    AbstractExecutablePlugin<IndexToPublishPluginMetadata> lastPublishPlugin = ExecutablePluginFactory.createPlugin(
+        new IndexToPublishPluginMetadata());
     lastPublishPlugin.setFinishedDate(notLongEnoughToBeValidDate);
     lastPublishPlugin.setDataStatus(null); // Is default status, means valid.
     lastPublishPlugin.setExecutionProgress(executionProgress);
@@ -889,7 +746,7 @@ class TestOrchestratorService {
     AbstractExecutablePlugin oaipmhHarvestPlugin = ExecutablePluginFactory
         .createPlugin(new OaipmhHarvestPluginMetadata());
     oaipmhHarvestPlugin.setFinishedDate(
-        DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINS + 5),
+        DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINUTES + 5),
             TimeUnit.MINUTES));
     oaipmhHarvestPlugin.setDataStatus(null); // Is default status, means valid.
     oaipmhHarvestPlugin.setExecutionProgress(executionProgress);
@@ -898,7 +755,7 @@ class TestOrchestratorService {
     AbstractExecutablePlugin firstPublishPlugin = ExecutablePluginFactory
         .createPlugin(new IndexToPublishPluginMetadata());
     firstPublishPlugin.setFinishedDate(
-        DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINS + 4),
+        DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINUTES + 4),
             TimeUnit.MINUTES));
     firstPublishPlugin.setDataStatus(null); // Is default status, means valid.
     firstPublishPlugin.setExecutionProgress(executionProgress);
@@ -920,7 +777,7 @@ class TestOrchestratorService {
     AbstractMetisPlugin reindexToPreviewPlugin = new ReindexToPreviewPlugin(
         new ReindexToPreviewPluginMetadata());
     reindexToPreviewPlugin.setFinishedDate(
-        DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINS + 1),
+        DateUtils.modifyDateByTimeUnitAmount(new Date(), -(SOLR_COMMIT_PERIOD_IN_MINUTES + 1),
             TimeUnit.MINUTES));
     final WorkflowExecution executionWithReindexToPreview = TestObjectFactory
         .createWorkflowExecutionObject();
@@ -938,7 +795,6 @@ class TestOrchestratorService {
     workflowExecutionObject.setMetisPlugins(metisPlugins);
 
     // Mock the workflow execution
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
     when(workflowExecutionDao.getLatestSuccessfulExecutablePlugin(datasetId,
         EnumSet.of(ExecutablePluginType.HTTP_HARVEST, ExecutablePluginType.OAIPMH_HARVEST), false))
@@ -952,28 +808,20 @@ class TestOrchestratorService {
         .thenReturn(new PluginWithExecutionId<>("", previewPlugin));
     when(workflowExecutionDao.getLatestSuccessfulPlugin(datasetId,
         EnumSet.of(PluginType.PREVIEW, PluginType.REINDEX_TO_PREVIEW)))
-        .thenReturn(
-            new PluginWithExecutionId<>(executionWithReindexToPreview.getId().toString(),
-                reindexToPreviewPlugin));
+        .thenReturn(new PluginWithExecutionId<>(executionWithReindexToPreview.getId().toString(), reindexToPreviewPlugin));
     when(workflowExecutionDao.getLatestSuccessfulExecutablePlugin(datasetId,
         EnumSet.of(ExecutablePluginType.PUBLISH), false))
         .thenReturn(new PluginWithExecutionId<>("", lastPublishPlugin));
     when(workflowExecutionDao.getLatestSuccessfulPlugin(datasetId,
-        EnumSet.of(PluginType.PUBLISH, PluginType.REINDEX_TO_PUBLISH)))
-        .thenReturn(new PluginWithExecutionId<>(
-            executionWithLastPublishPlugin.getId().toString(), lastPublishPlugin));
+        EnumSet.of(PluginType.PUBLISH, PluginType.REINDEX_TO_PUBLISH))).thenReturn(
+        new PluginWithExecutionId<>(executionWithLastPublishPlugin.getId().toString(), lastPublishPlugin));
     if (enableRunningPublish) {
-      when(workflowExecutionDao.getRunningOrInQueueExecution(datasetId))
-          .thenReturn(workflowExecutionObject);
+      when(workflowExecutionDao.getRunningOrInQueueExecution(datasetId)).thenReturn(workflowExecutionObject);
     } else {
       when(workflowExecutionDao.getRunningOrInQueueExecution(datasetId)).thenReturn(null);
     }
 
-    DatasetExecutionInformation executionInfo = orchestratorService
-        .getDatasetExecutionInformation(metisUserView, datasetId);
-
-    verify(authorizer, times(1)).authorizeReadExistingDatasetById(metisUserView, datasetId);
-    verifyNoMoreInteractions(authorizer);
+    DatasetExecutionInformation executionInfo = orchestratorService.getDatasetExecutionInformation(datasetId);
 
     assertEquals(oaipmhHarvestPlugin.getFinishedDate(), executionInfo.getLastHarvestedDate());
     assertEquals(reindexToPreviewPlugin.getFinishedDate(), executionInfo.getLastPreviewDate());
@@ -981,14 +829,13 @@ class TestOrchestratorService {
     assertEquals(lastPublishPlugin.getFinishedDate(), executionInfo.getLastPublishedDate());
 
     assertEquals(
-        oaipmhHarvestPlugin.getExecutionProgress().getProcessedRecords() - oaipmhHarvestPlugin
-            .getExecutionProgress().getErrors(), executionInfo.getLastHarvestedRecords());
+        oaipmhHarvestPlugin.getExecutionProgress().getProcessedRecords() - oaipmhHarvestPlugin.getExecutionProgress().getErrors(),
+        executionInfo.getLastHarvestedRecords());
+    assertEquals(previewPlugin.getExecutionProgress().getProcessedRecords() - previewPlugin.getExecutionProgress().getErrors(),
+        executionInfo.getLastPreviewRecords());
     assertEquals(
-        previewPlugin.getExecutionProgress().getProcessedRecords() - previewPlugin
-            .getExecutionProgress().getErrors(), executionInfo.getLastPreviewRecords());
-    assertEquals(
-        lastPublishPlugin.getExecutionProgress().getProcessedRecords() - lastPublishPlugin
-            .getExecutionProgress().getErrors(), executionInfo.getLastPublishedRecords());
+        lastPublishPlugin.getExecutionProgress().getProcessedRecords() - lastPublishPlugin.getExecutionProgress().getErrors(),
+        executionInfo.getLastPublishedRecords());
 
     assertEquals(previewReadyForViewing, executionInfo.isLastPreviewRecordsReadyForViewing());
     assertEquals(publishReadyForViewing, executionInfo.isLastPublishedRecordsReadyForViewing());
@@ -1008,6 +855,7 @@ class TestOrchestratorService {
 
     // Create plugins
     final AbstractExecutablePlugin plugin1 = mock(AbstractExecutablePlugin.class);
+    when(plugin1.getFinishedDate()).thenReturn(new Date());
     when(plugin1.getPluginType()).thenReturn(PluginType.OAIPMH_HARVEST);
     when(plugin1.getPluginMetadata()).thenReturn(new HTTPHarvestPluginMetadata());
     final ExecutionProgress progress1 = getExecutionProgress(10, 1);
@@ -1021,33 +869,40 @@ class TestOrchestratorService {
     when(plugin2.getExecutionProgress()).thenReturn(progress2);
     final AbstractExecutablePlugin plugin3 = mock(AbstractExecutablePlugin.class);
     when(plugin3.getPluginType()).thenReturn(PluginType.MEDIA_PROCESS);
-    when(plugin2.getPluginMetadata()).thenReturn(new MediaProcessPluginMetadata());
-    when(plugin3.getExecutionProgress()).thenReturn(null);
+    MediaProcessPluginMetadata mediaProcessPluginMetadata = new MediaProcessPluginMetadata();
+    mediaProcessPluginMetadata.setRevisionNamePreviousPlugin(plugin1.getPluginType().name());
+    mediaProcessPluginMetadata.setRevisionTimestampPreviousPlugin(plugin1.getFinishedDate());
+    when(plugin3.getPluginMetadata()).thenReturn(mediaProcessPluginMetadata);
+    when(plugin3.getExecutionProgress()).thenReturn(getExecutionProgress(0, 0));
     final ReindexToPreviewPlugin plugin4 = mock(ReindexToPreviewPlugin.class);
     when(plugin4.getPluginType()).thenReturn(PluginType.REINDEX_TO_PUBLISH);
+    ReindexToPreviewPluginMetadata reindexToPreviewPluginMetadata = new ReindexToPreviewPluginMetadata();
+    reindexToPreviewPluginMetadata.setRevisionNamePreviousPlugin(plugin3.getId());
+    reindexToPreviewPluginMetadata.setRevisionTimestampPreviousPlugin(plugin3.getFinishedDate());
+    when(plugin4.getPluginMetadata()).thenReturn(new ReindexToPreviewPluginMetadata());
     when(plugin4.getFinishedDate()).thenReturn(new Date(4));
 
     // Create other objects
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = "dataset ID";
-    final WorkflowExecution execution1 = createWorkflowExecution(metisUserView, datasetId, plugin1,
+    final WorkflowExecution execution1 = createWorkflowExecution(datasetId, plugin1,
         plugin2);
     execution1.setStartedDate(new Date(12345));
-    final WorkflowExecution execution2 = createWorkflowExecution(metisUserView, datasetId, plugin3);
-    final WorkflowExecution execution3 = createWorkflowExecution(metisUserView, datasetId, plugin4);
+    final WorkflowExecution execution2 = createWorkflowExecution(datasetId, plugin3);
+    final WorkflowExecution execution3 = createWorkflowExecution(datasetId, plugin4);
 
     // Mock the dao and call the method.
+    when(workflowExecutionDao.getByTaskExecution(any(), any())).thenReturn(execution1);
     doReturn(new ResultList<>(List.of(execution1, execution2, execution3), false))
         .when(workflowExecutionDao).getAllWorkflowExecutions(any(), any(), any(), anyBoolean(),
             anyInt(), any(), anyBoolean());
-    final ExecutionHistory result = orchestratorService.getDatasetExecutionHistory(metisUserView, datasetId);
+    final ExecutionHistory result = orchestratorService.getDatasetExecutionHistory(datasetId);
 
     // Verify the interactions
-    verify(authorizer, times(1)).authorizeReadExistingDatasetById(metisUserView, datasetId);
-    verifyNoMoreInteractions(authorizer);
     verify(workflowExecutionDao, times(1)).getAllWorkflowExecutions(
         eq(Collections.singleton(datasetId)), isNull(), eq(DaoFieldNames.STARTED_DATE), eq(false),
         eq(0), isNull(), eq(false));
+    verify(workflowExecutionDao, times(2)).getById(anyString());
+    verify(workflowExecutionDao, times(1)).getByTaskExecution(any(), any());
     verifyNoMoreInteractions(workflowExecutionDao);
 
     // Verify the result
@@ -1075,22 +930,21 @@ class TestOrchestratorService {
     when(plugin2.getExecutionProgress()).thenReturn(progress2);
     final AbstractExecutablePlugin plugin3 = mock(AbstractExecutablePlugin.class);
     when(plugin3.getPluginType()).thenReturn(PluginType.MEDIA_PROCESS);
-    when(plugin2.getPluginMetadata()).thenReturn(new MediaProcessPluginMetadata());
-    when(plugin3.getExecutionProgress()).thenReturn(null);
+    when(plugin3.getPluginMetadata()).thenReturn(new MediaProcessPluginMetadata());
+    when(plugin3.getExecutionProgress()).thenReturn(getExecutionProgress(0, 0));
     final ReindexToPreviewPlugin plugin4 = mock(ReindexToPreviewPlugin.class);
     when(plugin4.getPluginType()).thenReturn(PluginType.REINDEX_TO_PUBLISH);
     when(plugin4.getFinishedDate()).thenReturn(new Date(4));
 
     // Create other objects
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = "dataset ID";
-    final WorkflowExecution execution = createWorkflowExecution(metisUserView, datasetId, plugin1,
+    final WorkflowExecution execution = createWorkflowExecution(datasetId, plugin1,
         plugin2, plugin3, plugin4);
     final String workflowExecutionId = execution.getId().toString();
 
     // Test happy flow
     final PluginsWithDataAvailability result = orchestratorService
-        .getExecutablePluginsWithDataAvailability(metisUserView, workflowExecutionId);
+        .getExecutablePluginsWithDataAvailability(workflowExecutionId);
     assertNotNull(result);
     assertNotNull(result.getPlugins());
     assertEquals(1, result.getPlugins().size());
@@ -1098,77 +952,51 @@ class TestOrchestratorService {
     assertTrue(result.getPlugins().getFirst().isCanDisplayRawXml());
 
     // Test when the workflow execution does not exist
-    doReturn(null).when(orchestratorService)
-        .getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId);
-    assertThrows(NoWorkflowExecutionFoundException.class, () -> orchestratorService
-        .getExecutablePluginsWithDataAvailability(metisUserView, workflowExecutionId));
-
-    // Test when the user is not allowed
-    when(orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId))
-        .thenAnswer(invocation -> {
-          throw new UserUnauthorizedException("");
-        });
-    assertThrows(UserUnauthorizedException.class, () -> orchestratorService
-        .getExecutablePluginsWithDataAvailability(metisUserView, workflowExecutionId));
+    doReturn(null).when(workflowExecutionDao).getById(workflowExecutionId);
+    assertThrows(NoWorkflowExecutionFoundException.class,
+        () -> orchestratorService.getExecutablePluginsWithDataAvailability(workflowExecutionId));
   }
 
   @Test
-  void testGetRecordEvolutionForVersionExceptions() throws GenericMetisException {
+  void testGetRecordEvolutionForVersionExceptions() {
 
     // Create some objects
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String workflowExecutionId = "workflow execution ID";
     final PluginType pluginType = PluginType.MEDIA_PROCESS;
     final WorkflowExecution workflowExecution = mock(WorkflowExecution.class);
 
     // Test when the workflow execution does not exist
-    when(orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId))
-        .thenReturn(null);
+    when(workflowExecutionDao.getById(workflowExecutionId)).thenReturn(null);
     assertThrows(NoWorkflowExecutionFoundException.class, () -> orchestratorService
-        .getRecordEvolutionForVersion(metisUserView, workflowExecutionId, pluginType));
-
-    // Test when the user is not allowed
-    when(orchestratorService.getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId))
-        .thenAnswer(invocation -> {
-          throw new UserUnauthorizedException("");
-        });
-    assertThrows(UserUnauthorizedException.class, () -> orchestratorService
-        .getRecordEvolutionForVersion(metisUserView, workflowExecutionId, pluginType));
+        .getRecordEvolutionForVersion(workflowExecutionId, pluginType));
 
     // Test when the workflow execution does not have a plugin of the right type
-    doReturn(workflowExecution).when(orchestratorService)
-        .getWorkflowExecutionByExecutionId(metisUserView, workflowExecutionId);
-    when(workflowExecution.getMetisPluginWithType(pluginType)).thenReturn(Optional.empty());
-    assertThrows(NoWorkflowExecutionFoundException.class, () -> orchestratorService
-        .getRecordEvolutionForVersion(metisUserView, workflowExecutionId, pluginType));
+    doReturn(workflowExecution).when(workflowExecutionDao).getById(workflowExecutionId);
+    when(workflowExecution.getMetisPlugins()).thenReturn(Collections.emptyList());
+    assertThrows(NoWorkflowExecutionFoundException.class,
+        () -> orchestratorService.getRecordEvolutionForVersion(workflowExecutionId, pluginType));
   }
 
   @Test
   void testGetRecordEvolutionForVersionHappyFlow() throws GenericMetisException {
 
     // Create two workflow executions with three plugins and link them together
-    final MetisUserView metisUserView = TestObjectFactory.createMetisUser(TestObjectFactory.EMAIL);
     final String datasetId = "dataset ID";
-    final AbstractExecutablePlugin plugin1 = createMetisPlugin(ExecutablePluginType.OAIPMH_HARVEST,
-        new Date(1));
-    final AbstractExecutablePlugin plugin2 = createMetisPlugin(ExecutablePluginType.TRANSFORMATION,
-        new Date(2));
-    final AbstractExecutablePlugin plugin3 = createMetisPlugin(ExecutablePluginType.MEDIA_PROCESS,
-        new Date(3));
-    final WorkflowExecution execution1 = createWorkflowExecution(metisUserView, datasetId, plugin1);
-    final WorkflowExecution execution2 = createWorkflowExecution(metisUserView, datasetId, plugin2,
-        plugin3);
+    final AbstractExecutablePlugin plugin1 = createMetisPlugin(ExecutablePluginType.OAIPMH_HARVEST, new Date(1));
+    final AbstractExecutablePlugin plugin2 = createMetisPlugin(ExecutablePluginType.TRANSFORMATION, new Date(2));
+    final AbstractExecutablePlugin plugin3 = createMetisPlugin(ExecutablePluginType.MEDIA_PROCESS, new Date(3));
+    final WorkflowExecution execution1 = createWorkflowExecution(datasetId, plugin1);
+    final WorkflowExecution execution2 = createWorkflowExecution(datasetId, plugin2, plugin3);
 
     // Mock the methods in workflow utils.
-    final List<Pair<AbstractExecutablePlugin, WorkflowExecution>> evolutionWithContent = Arrays
-        .asList(
-            ImmutablePair.of(plugin1, execution1), ImmutablePair.of(plugin2, execution2));
+    final List<Pair<AbstractExecutablePlugin, WorkflowExecution>> evolutionWithContent = Arrays.asList(
+        ImmutablePair.of(plugin1, execution1), ImmutablePair.of(plugin2, execution2));
     doReturn(evolutionWithContent).when(dataEvolutionUtils).compileVersionEvolution(plugin3, execution2);
     doReturn(new ArrayList<>()).when(dataEvolutionUtils).compileVersionEvolution(plugin1, execution1);
 
     // Execute the call and expect an evolution with content.
-    final VersionEvolution resultForThree = orchestratorService.getRecordEvolutionForVersion(
-        metisUserView, execution2.getId().toString(), plugin3.getPluginType());
+    final VersionEvolution resultForThree = orchestratorService.getRecordEvolutionForVersion(execution2.getId().toString(),
+        plugin3.getPluginType());
     assertNotNull(resultForThree);
     assertNotNull(resultForThree.getEvolutionSteps());
     assertEquals(2, resultForThree.getEvolutionSteps().size());
@@ -1177,35 +1005,35 @@ class TestOrchestratorService {
 
     // Execute the call and expect an evolution without content.
     final VersionEvolution resultForOne = orchestratorService.getRecordEvolutionForVersion(
-        metisUserView, execution1.getId().toString(), plugin1.getPluginType());
+        execution1.getId().toString(), plugin1.getPluginType());
     assertNotNull(resultForOne);
     assertNotNull(resultForOne.getEvolutionSteps());
     assertTrue(resultForOne.getEvolutionSteps().isEmpty());
   }
 
   private void assertEvolutionStepEquals(VersionEvolutionStep evolutionStep,
-                                         WorkflowExecution execution, AbstractExecutablePlugin<?> plugin) {
+      WorkflowExecution execution, AbstractExecutablePlugin<?> plugin) {
     assertNotNull(evolutionStep);
     assertEquals(plugin.getFinishedDate(), evolutionStep.getFinishedTime());
-    assertEquals(plugin.getPluginMetadata().getExecutablePluginType(),
-        evolutionStep.getPluginType());
+    assertEquals(plugin.getPluginMetadata().getExecutablePluginType(), evolutionStep.getPluginType());
     assertEquals(execution.getId().toString(), evolutionStep.getWorkflowExecutionId());
   }
 
-  private WorkflowExecution createWorkflowExecution(MetisUserView metisUserView, String datasetId,
-                                                    AbstractMetisPlugin... plugins) throws GenericMetisException {
-    final WorkflowExecution result = new WorkflowExecution();
-    result.setId(new ObjectId());
-    result.setDatasetId(datasetId);
-    result.setMetisPlugins(Arrays.asList(plugins));
-    when(orchestratorService.getWorkflowExecutionByExecutionId(metisUserView,
-        result.getId().toString())).thenReturn(result);
-    return result;
+  private WorkflowExecution createWorkflowExecution(String datasetId,
+      AbstractMetisPlugin... plugins) throws GenericMetisException {
+    final WorkflowExecution workflowExecution = new WorkflowExecution();
+    workflowExecution.setId(new ObjectId());
+    workflowExecution.setDatasetId(datasetId);
+    workflowExecution.setMetisPlugins(Arrays.asList(plugins));
+    Dataset dataset = TestObjectFactory.createDataset(TestObjectFactory.DATASETNAME);
+    dataset.setDatasetId(datasetId);
+    when(workflowExecutionDao.getById(workflowExecution.getId().toString())).thenReturn(workflowExecution);
+    when(datasetDao.getDatasetOrThrow(dataset.getDatasetId())).thenReturn(dataset);
+    return workflowExecution;
   }
 
   private AbstractExecutablePlugin createMetisPlugin(ExecutablePluginType type, Date date) {
-    AbstractExecutablePlugin<AbstractExecutablePluginMetadata> result = mock(
-        AbstractExecutablePlugin.class);
+    AbstractExecutablePlugin<AbstractExecutablePluginMetadata> result = mock(AbstractExecutablePlugin.class);
     AbstractExecutablePluginMetadata metadata = mock(AbstractExecutablePluginMetadata.class);
     when(metadata.getExecutablePluginType()).thenReturn(type);
     when(result.getPluginType()).thenReturn(type.toPluginType());
